--- a/argocd/applications/retail-store-cart.yaml
+++ b/argocd/applications/retail-store-cart.yaml
@@ -9,7 +9,7 @@ spec:
   project: retail-store
   source: 
     repoURL: https://github.com/YR55/Retail-store-app.git
-    targetRevision: gitops
+    targetRevision: main
     path: src/cart/chart
     helm:
       valueFiles:
