--- a/argocd/applications/retail-store-catalog.yaml
+++ b/argocd/applications/retail-store-catalog.yaml
@@ -9,7 +9,7 @@ spec:
   project: retail-store
   source:
     repoURL: https://github.com/YR55/Retail-store-app.git
-    targetRevision: gitops
+    targetRevision: main
     path: src/catalog/chart
     helm:
       valueFiles:
