--- a/src/orders/chart/values.yaml
+++ b/src/orders/chart/values.yaml
@@ -3,7 +3,7 @@ replicaCount: 1
 image:
   repository: yogeshverma08/retail-store-orders
   pullPolicy: Always
-  tag: "980c375-9"
+  tag: ""
 
 imagePullSecrets:
   - name: regcred
