--- a/src/ui/Dockerfile
+++ b/src/ui/Dockerfile
@@ -1,68 +1,47 @@
+# =========================
 # Build Stage
-FROM public.ecr.aws/amazonlinux/amazonlinux:2023 AS build-env
+# =========================
+FROM public.ecr.aws/amazonlinux/amazonlinux:2023 AS build
 
-# We tell DNF not to install Recommends and Suggests packages, keeping our
-# installed set of packages as minimal as possible.
-RUN dnf --setopt=install_weak_deps=False install -q -y \
+RUN dnf install -y \
     maven \
     java-21-amazon-corretto-headless \
-    which \
-    tar \
-    gzip \
-    && \
-    dnf clean all
+    && dnf clean all
 
-VOLUME /tmp
-WORKDIR /
+WORKDIR /build
 
 COPY .mvn .mvn
 COPY mvnw .
-RUN chmod +x mvnw
 COPY pom.xml .
 
-RUN ./mvnw dependency:go-offline -B -q
+RUN chmod +x mvnw \
+    && ./mvnw dependency:go-offline -B
 
-COPY ./src ./src
+COPY src src
 
-RUN ./mvnw -DskipTests package -q && \
-    mv /target/ui-0.0.1-SNAPSHOT.jar /app.jar
+RUN ./mvnw clean package -DskipTests \
+    && mv target/ui-0.0.1-SNAPSHOT.jar app.jar
 
-# Package Stage
+
+# =========================
+# Runtime Stage
+# =========================
 FROM public.ecr.aws/amazonlinux/amazonlinux:2023
 
-# We tell DNF not to install Recommends and Suggests packages, which are
-# weak dependencies in DNF terminology, thus keeping our installed set of
-# packages as minimal as possible.
-RUN dnf --setopt=install_weak_deps=False install -q -y \
+RUN dnf install -y \
     java-21-amazon-corretto-headless \
-    shadow-utils \
-    && \
-    dnf clean all
+    && dnf clean all
 
-# use curl-full to use "telnet://" scheme
-# https://docs.aws.amazon.com/linux/al2023/ug/curl-minimal.html
-RUN dnf -q -y swap libcurl-minimal libcurl-full \
-    && dnf -q -y swap curl-minimal curl-full
-
-ENV APPUSER=appuser
-ENV APPUID=1000
-ENV APPGID=1000
-
-RUN useradd \
-    --home "/app" \
-    --create-home \
-    --user-group \
-    --uid "$APPUID" \
-    "$APPUSER"
-
-ENV JAVA_TOOL_OPTIONS=
-ENV SPRING_PROFILES_ACTIVE=prod
+# Non-root user for security
+RUN useradd -m appuser
 
 WORKDIR /app
 USER appuser
 
-COPY --chown=appuser:appuser --from=build-env /app.jar .
+COPY --from=build /build/app.jar app.jar
+
+ENV SPRING_PROFILES_ACTIVE=prod
 
 EXPOSE 8080
 
-ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS -jar /app/app.jar"]
+ENTRYPOINT ["java", "-jar", "app.jar"]
