--- a/src/catalog/Dockerfile
+++ b/src/catalog/Dockerfile
@@ -1,56 +1,28 @@
+# =========================
 # Build Stage
-FROM public.ecr.aws/amazonlinux/amazonlinux:2023 AS build-env
+# =========================
+FROM golang:1.22-alpine AS build
 
-# We tell DNF not to install Recommends and Suggests packages, which are
-# weak dependencies in DNF terminology, thus keeping our installed set of
-# packages as minimal as possible.
-RUN dnf --setopt=install_weak_deps=False install -q -y \
-    git \
-    golang \
-    && \
-    dnf clean all
-
-RUN mkdir -p "${GOPATH}/src" "${GOPATH}/bin" /appsrc
-
-WORKDIR /appsrc
-
-ENV GOPROXY=https://goproxy.io,direct
+WORKDIR /app
 
 COPY go.mod go.sum ./
 RUN go mod download
 
 COPY . .
-
 RUN go build -o main main.go
 
-# Final stage
-FROM public.ecr.aws/amazonlinux/amazonlinux:2023
 
-ENV APPUSER=appuser
-ENV APPUID=1000
-ENV APPGID=1000
-
-# We tell DNF not to install Recommends and Suggests packages, which are
-# weak dependencies in DNF terminology, thus keeping our installed set of
-# packages as minimal as possible.
-RUN dnf --setopt=install_weak_deps=False install -q -y \
-    shadow-utils \
-    && \
-    dnf clean all
-
-RUN useradd \
-    --home "/app" \
-    --create-home \
-    --user-group \
-    --uid "$APPUID" \
-    "$APPUSER"
+# =========================
+# Runtime Stage
+# =========================
+FROM alpine:3.20
 
 WORKDIR /app
-USER appuser
 
-COPY --chown=appuser:appuser --from=build-env /appsrc/main /app/
-
+COPY --from=build /app/main .
 
 ENV GIN_MODE=release
+
+EXPOSE 8080
 
 ENTRYPOINT ["/app/main"]
